# FretStorm

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  README.md  configure.ac
MusicExamples/: notes.mid
MusicExamples/Kamelot - Nights of Arabia/: notes.mid  song.ini
MusicExamples/Subfolder/Symphony X - The Sepents Kiss/: notes.mid  song.ini
cmake/: FindSqlite3.cmake
src/: Makefile.am  fretstorm.cpp
src/game/: NoteList.h
src/midi/: BinUtils.cpp  BinUtils.h  Makefile.am  MidiEvent.cpp  MidiEvent.h  MidiFile.cpp  MidiFile.h  MidiTrack.cpp  MidiTrack.h  event.cpp  event.h  midi.cpp  midi.h  song.cpp  song.h  track.cpp  track.h
src/scanner/: Makefile.am  node.cpp  node.hpp
